			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

VERSION 5.3.8 (Apr 07, 2004)
============================

  * FIXED: Quoted write of -(0) and similar cases.  Mike Elston.

  * ADDED: Exporting operators from modules.

  * ADDED: flag called generate_debug_info and commandline option -nodebug.
    Fixed/cleanup of various tracing options.

  * FIXED: Bug#140, various problems with complicated reload of files.
    Hans van de Koot.

  * FIXED: clause garbage collection for references from retract/1,
    clause/2, etc.

  * FIXED: profile detection on older versions of gcc.  Tom Schrijvers.

  * FIXED: repetitive qsave_program/2 handling.  Dima.

  * FIXED: Buffer overflow asserting to predicates with a very long
    name (caused by naming the mutex for mutex statistics).  Reported
    by Lourens van der Meij.

  * MODIFIED/FIXED: ensure_loaded/1 and use_module/[1,2] now use 
    load_files/2 with the option if(not_loaded) rather than if(changed).
    This avoids time handling problems with quick-load files, especially
    on Windows systems that base their time-stamp on local time rather
    than universal time.

    Use make/0 to update your project.  Applications that really need
    the old semantics should use load_files/2 directly.

  * ADDED: Central "make check" to run regression tests in main system and
    all packages.

  * CLEANED: handle command history per thread.

  * FIXED: handling of attributed variables in meta-calls.  Tom Schrijvers.

  * ADDED: set_prolog_OI/3 to handle interactive I/O from arbitrary
    streams.

VERSION 5.3.7 (Mar 26, 2004)
============================

  * ADDED: First prototype of binary-blobs-in-atoms after
    discussion on the mailinglist.

  * ADDED: CHR Debugger.  Tom Schrijvers.
